2012-01-28  Kirit Saelensminde  <kirit@felspar.com>
 Fixed up some build errors for the new null_ptr.

2011-08-22  Kirit Saelensminde  <kirit@felspar.com>
 Made a couple of default arguments in the user agent (Python) safer.

2011-07-28  Kirit Saelensminde  <kirit@felspar.com>
 Boost 1.46.0 is now properly supported.

2010-06-09  Kirit Saelensminde  <kirit@felspar.com>
 User agent
 - The request data can now be retrieved from the request object.

2010-05-30  Kirit Saelensminde  <kirit@felspar.com>
 Python bindings
 - Added binding for the host class.
 Code layout
 - Changed the layout of the internet Python code.

2010-04-03  Kirit Saelensminde  <kirit@felspar.com>
 Code layout
 - Moved internal headers to a better location

2010-03-29  Kirit Saelensminde  <kirit@felspar.com>
 Internet bindings
 - The user agent body is now returned as a Python string rather than as a
   Unicode string. Interpretation of the data is now up to the Python code.

2010-03-22  Kirit Saelensminde  <kirit@felspar.com>
 ChangeLog
 - Added ChangeLog