@@ -1,3 +1,9 @@
+2012-04-10  Kirit Saelensminde  <kirit@felspar.com>
+ Removed the Fost authentication middleware for Django as this is now a separate pypi package.
+
+2012-03-25  Kirit Saelensminde  <kirit@felspar.com>
+ Silenced a clang warning.
+
 2012-01-28  Kirit Saelensminde  <kirit@felspar.com>
  Fixed up some build errors for the new null_ptr.
 
